# DuoShotToAnki

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  Dockerfile  Makefile  README.org  docker-compose.yml  test_request.sh
data/: captured_anki_cards.org
docs/: FutureWork.org
src/: config.h  duo_anki_interface.h  gemini_client.cpp  gemini_client.h  main.cpp  org_formatter.cpp  org_formatter.h  response_template.json  safe_queue.cpp  safe_queue.h  translate_cmd.h  writer.cpp  writer.h
test/: CMakeLists.txt  test_org_formatter.cpp  test_safe_queue.cpp
